--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 
 
  <body>
-
-   <main>
+<style>
+.main img{
+    max-width: auto;
+    height: 100%;
+}
+</style>
+  <div class="main">
 　<img src="jpg その他 image 1.JPEG">
-　
- </main>
+
 　</div>
 
  </body>
