--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
  <body>
 <style>
 .main img{
-    max-width: auto;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
 }
 </style>
   <div class="main">
